[gd_scene load_steps=7 format=3 uid="uid://bhpkvdpffckbg"]

[ext_resource type="Script" path="res://GUI/stage.gd" id="1_4j517"]
[ext_resource type="PackedScene" uid="uid://ld6bdl0q1lvi" path="res://GUI/audio_button.tscn" id="2_433x6"]
[ext_resource type="Texture2D" uid="uid://by8hku7lkkbib" path="res://asset/stage_bg.png" id="2_k4bdv"]
[ext_resource type="Texture2D" uid="uid://b3l60vdlx1uyy" path="res://asset/arrow_left.png" id="3_n6u73"]
[ext_resource type="Texture2D" uid="uid://jccu6vwwi78c" path="res://asset/stage_bg2.png" id="3_ucchy"]
[ext_resource type="Texture2D" uid="uid://ba7cxqb5ehw8b" path="res://asset/arrow_right.png" id="4_imts1"]

[node name="Stage" type="CanvasLayer"]
script = ExtResource("1_4j517")

[node name="BgImage" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1

[node name="MainActor" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
offset_right = 640.0
offset_bottom = 200.0
size_flags_vertical = 3

[node name="bg" type="TextureRect" parent="MainActor"]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k4bdv")
expand_mode = 1

[node name="Image" type="TextureRect" parent="MainActor"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MainActorDialogue" type="VBoxContainer" parent="MainActor"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 488.0
grow_vertical = 2

[node name="MainActorName" type="Label" parent="MainActor/MainActorDialogue"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainDialogue" type="Label" parent="MainActor/MainActorDialogue"]
custom_minimum_size = Vector2(480, 156)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ActorName" type="Label" parent="."]
offset_left = 24.0
offset_top = 204.0
offset_right = 25.0
offset_bottom = 222.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActorDialogue" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 222.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="AvatarContainer" type="HBoxContainer" parent="ActorDialogue"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelAvatar" type="Panel" parent="ActorDialogue/AvatarContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(110, 110)
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="ActorDialogue/AvatarContainer/PanelAvatar"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
expand_mode = 2

[node name="Panel" type="Panel" parent="ActorDialogue/AvatarContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Dialogue" type="Label" parent="ActorDialogue/AvatarContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="bg2" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ucchy")
expand_mode = 1

[node name="OpBtsContainer" type="HBoxContainer" parent="."]
offset_left = 2.0
offset_top = 340.0
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/separation = 15
alignment = 1

[node name="Back" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
icon = ExtResource("3_n6u73")
icon_alignment = 1
expand_icon = true

[node name="Next" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
icon = ExtResource("4_imts1")
icon_alignment = 1
expand_icon = true

[node name="Auto" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "K_AUTO"

[node name="FastForward" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "K_FF"

[node name="Skip" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "K_SKIP"

[node name="Setting" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "K_SETTINGS"

[node name="BackToMain" parent="OpBtsContainer" instance=ExtResource("2_433x6")]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "K_BACK_M"

[node name="ChoicesBox" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Button" parent="ChoicesBox" instance=ExtResource("2_433x6")]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ChoicesBox/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="OpBtsContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="OpBtsContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="OpBtsContainer/Auto" to="." method="_on_auto_pressed"]
[connection signal="pressed" from="OpBtsContainer/FastForward" to="." method="_on_fast_forward_pressed"]
[connection signal="pressed" from="OpBtsContainer/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="OpBtsContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="OpBtsContainer/BackToMain" to="." method="_on_back_m_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
